fix: update drawer z-index

--- a/components/GameTaskDrawer/styles.module.scss
+++ b/components/GameTaskDrawer/styles.module.scss
@@ -1,4 +1,6 @@
 .taskBox {
+  position: relative;
+  z-index: 1800;
   height: calc(100vh - 9rem);
   background: #f6f1fd;
   padding: 1.5rem 1.33rem;
@@ -272,9 +274,14 @@
 
   :global {
     .MuiPaper-root {
+      position: relative;
+      z-index: 1600;
       border-top-right-radius: 1rem;
       border-top-left-radius: 1rem;
       overscroll-behavior: none;
+    }
+    .MuiBackdrop-root {
+      z-index: 1600;
     }
   }
 }
